@@ -291,10 +291,10 @@ Author URI: http://www.themeblvd.com
 	border-bottom-color: rgba(220,220,220,.5);
 }
 .tb-mobile-panel.light .tb-side-menu .sub-menu {
-	background-image: url('../../framework/assets/img/parts/side-nav-list-outer-cccccc.png');
+	background-image: url('../../../framework/assets/img/parts/side-nav-list-outer-cccccc.png');
 }
 .tb-mobile-panel.light .tb-side-menu .sub-menu li {
-	background-image: url('../../framework/assets/img/parts/side-nav-list-ltr-cccccc.png');
+	background-image: url('../../../framework/assets/img/parts/side-nav-list-ltr-cccccc.png');
 }
 .tb-mobile-panel.light .tb-search {
 	border-bottom-color: rgba(220,220,220,.5);
