@@ -11,6 +11,7 @@
 * Improvement: Better spacing with Image elements, that are linked and have full-size images.
 * Fixed: Adding missing `base` key in `themeblvd_admin_module_caps` filtered array, so that the user capability of the Theme Bases admin page can be modified (see [tutorial](http://dev.themeblvd.com/tutorial/changing-user-role-access-for-admin-modules/)).
 * Fixed: Milestone element animations not working when values contain commas.
+* Fixed: Broken mobile menu navigation list background image, when using light background color.
 * Removed: Removed outdated style-editor.css file.
 * Updated: FontAwesome to 5.5.
 
